--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,49 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
           border-radius: 4px;
 }
 
+#com-em{
+	color: rgba(0,0,0,0.5);
+	text-align: center;
+	line-height: 206px;
+	font-style: italic;
+}
+
+.film-avis{
+	margin: 0 10px;
+	border-bottom: solid 1px rgba(0,0,0,0.2);
+	-webkit-border-radius:0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+    color: rgba(0,0,0,0.6);
+}
+
+.film-avis:hover{
+	background-color: rgba(0,0,0,0.08);
+	}
+
+.info-avis{
+	height:28px;
+	width: 100%;
+}
+
+.info-avis strong{
+	float: left;
+}
+
+.info-avis em{
+	float: right;
+	font-size: 12px;
+	opacity: 0.6;
+}
+
+.white-avis{
+	background-color: rgba(255,255,255,0.4);
+}
+
+.white-avis:hover{
+	background-color: rgba(0,0,0,0.001);
+	}
+
 #add-avis{
 	height: 112px;
 	margin: 0;
@@ -500,6 +543,13 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
    height:30px;
 }
 
+.img-film img
+{
+	width:70px;
+	height:80px;
+	border: solid 4px rgba(0,0,0,0.08);
+	margin: 4px 4px 4px 0;
+}
 
 .usersearch{
 	width:120px;
@@ -508,10 +558,12 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
      -moz-border-radius: 4px;
           border-radius: 4px;
     padding:5px;
-    margin:2px 6px;
+    margin:4px 5px;
     display: inline-block;
+    vertical-align: top;
     color:black;
     text-decoration: none;
+    min-height: 110px;
 }
 
 
@@ -589,4 +641,19 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
 .logout{
 	font-size: 12px;
 	line-height: 40px;
+}
+
+.btn-film{
+	position: absolute;
+	right:10px;
+	top:10px;
+}
+
+.avis-film{
+	position: relative;
+}
+
+#avis-right2{
+	display: none;
+	margin:20px 0;
 }
