--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,11 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
  	border-left: solid 1px rgba(0,0,0,0.4);
 }
 
+.nav-admin li{
+	padding:0 22px;
+	font-size:12px;
+}
+
 .nav li a{
 	background-color: inherit;
 	color:inherit;
@@ -543,12 +548,16 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
    height:30px;
 }
 
+.img-film{
+	padding-right: 10px;
+}
+
 .img-film img
 {
-	width:70px;
+	width:80px;
 	height:80px;
 	border: solid 4px rgba(0,0,0,0.08);
-	margin: 4px 4px 4px 0;
+	margin: 4px 6px 4px 0;
 }
 
 .usersearch{
@@ -657,3 +666,38 @@ input[type=text],input[type=number],input[type=date], input[type=mail]{
 	display: none;
 	margin:20px 0;
 }
+
+caption, .theme-perso{
+	background-color: rgba(0,0,0,0.2);
+	color: white;
+	font-weight: bold;
+	text-shadow : 1px 1px 0 rgba(0,0,0,0.2);
+}
+
+.direct{
+	background-color: #7A8CBF;
+	color: white;
+	font-weight: bold;
+	text-shadow : 1px 1px 0 rgba(0,0,0,0.2);
+}
+
+
+.caisse{
+	background-color: #8FBC74;
+}
+
+
+.projec{
+	background-color: #BA876B;
+}
+
+
+.nettoyage{
+	background-color: #82AFB7;
+}
+
+.avatar-profil img {
+	width: 115px;
+	height:130px;
+}
+
